# rag

./: .gitignore  IngestionTechniques.md  README.md
basic/: main.py  pyproject.toml
second/: builddb.py  main.py  pyproject.toml
