[project]
name = "basic"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-ollama (>=1.1.0,<2.0.0)",
    "chromadb (>=1.5.9,<2.0.0)",
    "langchain (>=1.3.2,<2.0.0)",
    "pymupdf (>=1.27.2.3,<2.0.0.0)",
    "langchain-chroma (>=1.1.0,<2.0.0)",
    "langchain-text-splitters (>=1.1.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11,<=3.13.2"